--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-Game_BaseApp/
-Game_Decomp/
+AssetStudio.v0.15.24/
+base_decoded/
+raw_game_decomp/
 GITHUB_SB69DATA/
-InjectFiles_Test/
+SB69FES_installer/
